<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">WSDOT</string>
    <string name="menu_refresh">Refresh</string>
    <string name="action_bar_share_with">Share with#8230;</string>

    <string name="btn_traffic">Traffic Map</string>
    <string name="btn_passes">Mountain Passes</string>
    <string name="btn_ferries">Ferries</string>
    <string name="btn_tolling">Toll Rates</string>
    <string name="btn_border">Border Wait</string>
    <string name="btn_amtrakcascades">Amtrak Cascades</string>

    <string name="title_borderwait">Border Wait</string>
    <string name="title_about">About</string>
    <string name="title_flickr">Flickr</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_blog">Blogger</string>
    <string name="title_youtube">YouTube</string>
    <string name="title_ferries">Ferries</string>
    <string name="title_ferriesroutealerts">Route Alerts</string>
    <string name="title_ferriesrouteschedules">Route Schedules</string>
    <string name="title_vesselwatch">Vessel Watch</string>
    <string name="title_alerts">Alerts In This Area</string>
    <string name="title_traveltimes">Travel Times</string>
    <string name="title_expresslanes">Express Lanes</string>
    <string name="title_trafficmap">Traffic Map</string>
    <string name="title_tollrates">Toll Rates</string>
    <string name="title_mountainpasses">Mountain Passes</string>
    <string name="title_news">News</string>
    <string name="title_departing">Departing</string>
    <string name="title_arriving">Arriving</string>
    <string name="title_amtrakcascades">Amtrak Cascades</string>
    <string name="title_amtrakcascades_schedules">Find Schedules</string>
    <string name="title_amtrakcascades_train_schedules">Train Schedules</string>
    <string name="button_check_schedules">Check Schedules</string>

    <string name="description_refresh">Refresh</string>
    <string name="description_about">About</string>
    <string name="description_settings">Settings</string>

    <string name="description_cameras">Cameras</string>
    <string name="description_gotolocation">GoTo Location</string>
    <string name="description_travel_times">Travel Times</string>z
    <string name="description_star">Star</string>
    <string name="description_alert">Alert</string>
    <string name="description_map">check traffic map</string>

    <string name="add_favorite">Added to favorites.</string>
    <string name="remove_favorite">Removed from favorites.</string>

    <string name="high_impact_alerts_inactive">No highest impact travel alerts</string>
    <string name="no_favorites">No favorites added yet.</string>
    <string name="no_connection">Can\'t load data. Check your connection.</string>
    <string name="no_matching_travel_times">No matching travel times.</string>
    <string name="no_day_departures">No departures available.</string>

    <string name="search_title">Search</string>

    <string name="description_vessel_watch">VESSEL WATCH</string>
    <string name="drive_up_spaces">Drive-up spaces</string>
    <string name="drive_up_spaces_disclaimer">Vehicles in line for tollbooth are not included in this estimate</string>

    <string name="adBannerDescription">advertisement banner</string>
    <string name="description_favorite">Favorite this location</string>

    <string name="expresslanes_link_title">Express Lanes Schedule</string>
    <string name="expresslanes_info">WSDOT uses express lanes to assist the flow of
                        traffic during busy travel times. These lanes are scheduled to
                        move in the direction that will relieve the most congestion from
                        the transportation system. We operate the lanes on a typical
                        daily schedule that changes on the weekends and occasionally
                        for major events.</string>

    <string name="add_location_dialog">New favorite location</string>
    <string name="submit">OK</string>
    <string name="cancel">Cancel</string>
    <string name="description_alerts_in_area">Alerts in This Area</string>
    <string name="description_map_legend">Map Legend</string>

    <string name="title_activity_my_route">My Routes</string>
    <string name="title_activity_new_route">New Route</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drag_and_drop_description">drag and drop to rearrange</string>
    <string name="new_route_description">Create a new route</string>
    <string name="description_my_goodtogo">MyGoodToGo.com</string>
    <string name="title_besttimes">Best Times To Travel</string>
    <string name="description_express_lanes">Express Lanes</string>
    <string name="description_social_media">Happening Now</string>
    <string name="description_news">News Releases</string>
    <string name="rename_location_dialog">Rename favorite location</string>

    <string name="btn_my_routes">My Routes</string>

    <string name="my_routes_info_string">Create custom routes by using your phone\'s GPS. Once created,
        easily check for alerts and let the WSDOT app automatically add cameras, travel times, pass reports and
        ferry schedules on your route to your favorites.</string>
    <string name="create_new_route_header">Creating a New Route</string>
    <string name="new_route_steps">1. Tap \"Start Tracking\" on the New Route screen.
        \n2. Make your way along the route you want to save.
        \n3. When you arrive at your destination, tap \"Finish\" to save your new route.</string>
    <string name="new_route_get_started">Tap the plus button to get started</string>
    <string name="tracking_route_info_message">Set your device down and make your way along your route. Tap Finish when you\'ve arrived at your destination.</string>

    <!-- Shared pref strings -->

    <string name="event_start_date">event_start_date</string>
    <string name="event_end_date">event_end_date</string>
    <string name="event_banner_text_key">event_banner_text_key</string>
    <string name="event_title_key">event_title_key</string>
    <string name="event_details_key">event_details_key</string>
    <string name="event_theme_key">event_theme_key</string>
    <string name="toll_rates_405_travel_direction_key">toll_rates_405_travel_direction_key</string>
    <string name="toll_rates_167_travel_direction_key">toll_rates_167_travel_direction_key</string>

    <string name="event_is_active">event_is_active</string>

    <string name="set_theme_key">set_theme_key</string>
    <string name="description_notifications">Notification settings</string>
    <string name="title_activity_notifications">Notification Settings</string>
    <string name="no_alerts">No Active Alerts</string>
    <string name="no_schedule">Schedule currently unavailable</string>
    <string name="firebase_notification_topics_version">firebase_notification_topics_version</string>
    <string name="new_firebase_notification_topics_version">new_firebase_notification_topics_version</string>
    <string name="firebase_notification_description">firebase_notification_description</string>
    <string name="firebase_notification_title">firebase_notification_title</string>

    <string name="toll_rates_disclaimer_text">toll_rates_disclaimer</string>

    <string name="description_map_button">show on map</string>
    <string name="description_about_goodtogo">MyGoodToGo.com</string>
    <string name="i405_info_link">Learn how I-405 tolls work</string>
    <string name="sr167_info_link">Learn how SR 167 tolls work</string>
    <string name="description_reservations">Reservations</string>
    <string name="title_ferry_sailings">Sailings</string>

    <string name="favorites_one">KEY_FIRST_FAVORITES_SECTION_v1</string>
    <string name="favorites_two">KEY_SECOND_FAVORITES_SECTION_v1</string>
    <string name="favorites_three">KEY_THIRD_FAVORITES_SECTION_v1</string>
    <string name="favorites_four">KEY_FOURTH_FAVORITES_SECTION_v1</string>
    <string name="favorites_five">KEY_FIFTH_FAVORITES_SECTION_v1</string>
    <string name="favorites_six">KEY_SIXTH_FAVORITES_SECTION_v1</string>
    <string name="favorites_seven">KEY_SEVENTH_FAVORITES_SECTION_v1</string>
    <string name="favorites_eight">KEY_EIGHTH_FAVORITES_SECTION_v1</string>


</resources>
