<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/event_banner"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/alerts"
        android:textColor="@color/dark_orange"
        android:visibility="gone"
        android:gravity="center"/>

<gov.wa.wsdot.android.wsdot.ui.widget.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button android:id="@+id/home_btn_traffic"
        style="@style/DashboardButton"
        android:text="@string/btn_traffic"
        android:drawableTop="@drawable/home_btn_traffic" />
    <Button android:id="@+id/home_btn_ferries"
        style="@style/DashboardButton"
        android:text="@string/btn_ferries"
        android:drawableTop="@drawable/home_btn_ferries" />
    <Button android:id="@+id/home_btn_passes"
        style="@style/DashboardButton"
        android:text="@string/btn_passes"
        android:drawableTop="@drawable/home_btn_passes" />
    <Button android:id="@+id/home_btn_tolling"
        style="@style/DashboardButton"
        android:text="@string/btn_tolling"
        android:drawableTop="@drawable/home_btn_tolling" />
    <Button android:id="@+id/home_btn_border"
        style="@style/DashboardButton"
        android:text="@string/btn_border"
        android:drawableTop="@drawable/home_btn_border" />
    <Button android:id="@+id/home_btn_amtrak"
        style="@style/DashboardButton"
        android:text="@string/btn_amtrakcascades"
        android:drawableTop="@drawable/home_btn_amtrak" />
    <Button android:id="@+id/dummy1"
        style="@style/DashboardButton"
        android:visibility="invisible" />
    <Button android:id="@+id/home_btn_my_routes"
        style="@style/DashboardButton"
        android:text="@string/btn_my_routes"
        android:drawableTop="@drawable/home_btn_my_routes" />
    <Button android:id="@+id/dummy2"
        style="@style/DashboardButton"
        android:visibility="invisible" />

</gov.wa.wsdot.android.wsdot.ui.widget.DashboardLayout>




</RelativeLayout>