<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:fillViewport="true"
    android:descendantFocusability="blocksDescendants" >

    <CheckBox
        android:id="@+id/star_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_star"
        style="@style/StarButton"/>

    <TextView
        android:id="@+id/title"
        android:layout_toRightOf="@+id/star_button"
        android:layout_toEndOf="@+id/star_button"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/black"

        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/alert_button"
        android:contentDescription="@string/description_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toStartOf="@+id/map_button"
        android:layout_toLeftOf="@+id/map_button"

        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"

        android:background="@null"/>

    <ImageButton
        android:id="@+id/map_button"
        android:contentDescription="@string/description_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toStartOf="@+id/settings_button"
        android:layout_toLeftOf="@+id/settings_button"

        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"

        android:background="@null"/>

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"

        android:background="@null"/>


</RelativeLayout>